--- a/package.json
+++ b/package.json
@@ -1,51 +1,46 @@
 {
-  "name": "reflexbox",
-  "version": "2.2.3",
+  "name": "reflexbox-modern",
+  "version": "2.2.4-beta1",
   "description": "React flexbox layout and grid system",
   "main": "dist/index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack --progress --colors --config docs/webpack.config.js",
-    "start": "webpack-dev-server --progress --colors --config docs/webpack.config.js",
-    "gh-pages": "gh-pages -d docs",
     "prepublish": "mkdir -p dist && babel src --out-dir dist",
-    "fix": "standard --fix",
-    "test": "standard && ava -v"
+    "start": "webpack-dev-server --progress --colors --config docs/webpack.config.js",
+    "test": "jest"
   },
   "author": "Brent Jackson",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0"
+    "react": "^16.0.0"
   },
   "devDependencies": {
-    "ava": "^0.15.2",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.5.2",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.3",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.11.6",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "cxs": "^1.0.0",
-    "enzyme": "^2.4.1",
     "gh-pages": "^0.11.0",
     "html-loader": "^0.4.3",
+    "jest": "^23.5.0",
     "jsdom": "^9.4.1",
     "jsdom-global": "^2.0.0",
     "json-loader": "^0.5.3",
     "markdown-loader": "^0.1.7",
     "mocha": "^2.3.3",
     "raw-loader": "^0.5.1",
-    "react": "^15.3.0",
-    "react-addons-test-utils": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-element-to-jsx-string": "^3.2.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "standard": "^7.1.2",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
-    "robox": "^1.0.0-beta.8",
+    "prop-types": "^15.6.2",
+    "robox-modern": "1.0.0-beta9",
     "ruled": "^1.0.1"
   },
   "repository": {
@@ -61,19 +56,6 @@
   ],
   "bugs": {
     "url": "https://github.com/jxnblk/reflexbox/issues"
-  },
-  "babel": {
-    "presets": [
-      "es2015",
-      "stage-0",
-      "react"
-    ]
-  },
-  "ava": {
-    "require": [
-      "babel-register"
-    ],
-    "babel": "inherit"
   },
   "standard": {
     "parser": "babel-eslint",
